line spacing in media query fix

--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -30,30 +30,29 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Tablet media queries */
 @media screen and (min-width: 768px) and (max-width: 1024px){
-  h1 {
+  .title {
     font-size: 36px;
   }
   p{
     font-size: 36px;
     max-width: 100%; /* Limit width to the screen width */
     text-align: center;
-    padding: 20px;
+    padding: 25px;
     box-sizing: border-box; /* Ensure padding is included in the width */
   }
 }
 
 /* Desktop media queries */
 @media screen and (min-width: 1080px) and (max-width: 1920px){
-  h1 {
+  .title {
     font-size: 36px;
   }
   p{
     font-size: 48px;
+    line-height: 1.5; /* Adjust line spacing as needed */
     max-width: 100%; /* Limit width to the screen width */
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     box-sizing: border-box; /* Ensure padding is included in the width */
   }
 }
-
-
